--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="C:\Users\hiche\Documents\Web Development\HTML - Personal Site\Image\20 - fake-human-circle-img.png" alt="mr.salta"></td>
+                <td><img src="Image\20 - fake-human-circle-img.png" alt="mr.salta"></td>
                 <td><h1>Hichem Oulmou</h1>
                     <p><em>Student.</em></p></td>
             </tr>
